--- a/PruebaBloque1/PruebaBloque1.ioc
+++ b/PruebaBloque1/PruebaBloque1.ioc
@@ -8,6 +8,7 @@ ETH.PHY_Name=LAN8742A_PHY_ADDRESS
 ETH.PHY_Value=0
 ETH.PhyAddress=0
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F746ZGT6
 Mcu.Family=STM32F7
@@ -59,6 +60,7 @@ MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
@@ -143,8 +145,9 @@ PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
-PC13.GPIOParameters=GPIO_Label
-PC13.GPIO_Label=USER_Btn [B1]
+PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PC13.GPIO_Label=Boton
+PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PC13.Locked=true
 PC13.Signal=GPXTI13
 PC14/OSC32_IN.Locked=true
