--- a/SAC_Tarea2/SAC_Tarea2.ioc
+++ b/SAC_Tarea2/SAC_Tarea2.ioc
@@ -13,9 +13,10 @@ Mcu.IPNb=2
 Mcu.Name=STM32L552Z(C-E)TxQ
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
-Mcu.Pin1=PC7
-Mcu.Pin2=PB7
-Mcu.PinsNb=3
+Mcu.Pin1=PF14
+Mcu.Pin2=PC7
+Mcu.Pin3=PB7
+Mcu.PinsNb=4
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L552ZCTxQ
@@ -24,6 +25,7 @@ MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI13_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.EXTI14_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -46,6 +48,11 @@ PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=Led1
 PC7.Locked=true
 PC7.Signal=GPIO_Output
+PF14.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
+PF14.GPIO_Label=Boton2
+PF14.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PF14.Locked=true
+PF14.Signal=GPXTI14
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -107,5 +114,7 @@ RCC.VCOSAI1OutputFreq_Value=32000000
 RCC.VCOSAI2OutputFreq_Value=32000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.GPXTI14.0=GPIO_EXTI14
+SH.GPXTI14.ConfNb=1
 board=custom
 isbadioc=false
